--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 		<div class="menu-container">
 		  <ul class="menu"><li class=" first"><a href="#">Home</a></li>
 		    <li class=""><a href="program.html">Program</a></li>
+			<li class=""><a href="brainfactory.html">BrainFactory</a></li>
 		    <li class=""><a href="speakers.html">Speakers</a></li>
 		    <li class=""><a href="about-us.html">About Us</a></li>
 			<li class=""><a href="tickets.html">Tickets</a></li>
@@ -254,7 +255,6 @@
       <!-- Container Section Ends -->
       
     </div>
-    <div class="wrapper spacer"></div>
 
     <!-- Wrapper // Content Spacer Section Ends -->
 
@@ -285,7 +285,16 @@
 						<div class="col-sm-4 justify-center"><a href="/side-events"><img src="images/events/event-3.png"></a></div>
 						<div class="col-sm-4 justify-center"><a href="/brainfactory"><img src="images/events/event-4.png"></a></div>
 	    </div>
-	    -->       		
+	    -->   
+		<div class="padding-top-40 justify-center">
+			<h3>Made possible by:</h3>
+		
+		<ul class="flex-container wrap">
+			<li class="flex-item" style="width: 160px"><a href="https://www.helsinki.fi/en/networks/legal-tech-lab" target="_blank"><img src="images/collabs/helsinki-legal-tech-lab.png"></a></li>
+			<li class="flex-item" style="width: 300px"><a href="https://lawyersdesignschool.com/" target="_blank"><img src="images/collabs/LD_logo_pieni_sb.png"></a></li>
+			<li class="flex-item" style="width: 190px"><a href="https://treehouseinnovation.com/" target="_blank"><img src="images/collabs/Treehouse-Jul2016.png"></a></li>
+		</ul>
+		</div>  		
 	  </div>
 	  
 	  <!-- Content Main Section Ends -->
@@ -429,6 +438,8 @@
 
 <!-- Reworked section on logos to appear, now using flex wrap instead of flexgrid-->
 
+
+
 <div class="padding-top-40 justify-center">
 	<h3>In co-operation with</h3>
 	    <p>We love collaborating with non-profits - Get in touch to join forces with us!</p>
@@ -454,7 +465,7 @@
 	<li class="flex-item" style="width: 350px;"><a href="https://www.ulapland.fi/EN" target="_blank"><img src="images/collabs/lapin-yliopisto.png"></a></li>
 	<li class="flex-item" style="width: 300px;"><a href="https://sjquinney.utah.edu/" target="_blank"><img src="images/collabs/college-of-law-logolcolor.jpg"></a></li>
 	<li class="flex-item" style="width: 300px;"><a href="https://www.lancaster.ac.uk/law/" target="_blank"><img src="images/collabs/lancaster-logo-2.PNG"></a></li>
-	<li class="flex-item" style="width: 170px;"><a href="https://www.helsinki.fi/en/networks/legal-tech-lab" target="_blank"><img src="images/collabs/helsinki-legal-tech-lab.png"></a></li>
+	<li class="flex-item" style="width: 170px;"><a href="https://www.helsinki.fi/en/faculty-law" target="_blank"><img src="images/collabs/Helsingin-yliopisto-oikis.PNG"></a></li>
 	<li class="flex-item"><a href="https://www.elegal.technology/" target="_blank"><img src="images/collabs/logo-eLegal.png"></a></li>
   </ul>
 
