--- a/speakers.html
+++ b/speakers.html
@@ -73,6 +73,7 @@
 		<div class="menu-container">
 		  <ul class="menu"><li class=" first"><a href="index.html">Home</a></li>
 		    <li class=""><a href="program.html">Program</a></li>
+        <li class=""><a href="brainfactory.html">BrainFactory</a></li>
 		    <li class=""><a href="speakers.html">Speakers</a></li>
 		    <li class=""><a href="about-us.html">About Us</a></li>
         <li class=""><a href="tickets.html">Tickets</a></li>
@@ -116,8 +117,17 @@
               <div class="justify-center">
                 <h3 style="font-size: 25px;">Margaret Hagan</h3>
                 <div class="image"><a><img src="images/speakers/2023/margaret-hagan.jpg"></a></div>
-                <p>is the Executive Director of the Legal Design Lab at Stanford University, as well as lecturer at the Law School and d.school. She is a lawyer, and holds a J.D. from Stanford Law School, a DPhil from Queen’s University Belfast, an MA from Central European University, and an AB from University of Chicago. Margaret researches & designs new ways to make the legal system accessible, dignified, and just for more people. <br><br>Recently, her work has focused on designing and scaling new models of eviction prevention, and improving how search engines, AI tools, and other tech platforms serve people with legal help. See more work at the Stanford Legal Design Lab site (http://legaltechdesign.com).<br><span class="small"></p>
+                <p>is a legal information designer, educator, and cartoonist. She is the founder of the Graphic Advocacy Project, a nonprofit that works with advocates and communities to share legal knowledge. Hallie is currently a visiting professor at the University of Utah S.J. Quinney College of Law, where she runs the Creative Advocacy Lab, a legal information design clinic that re-envisions lawyers as community educators, problem-solvers, and storytellers.<br><span class="small"></p>
               </div>
+            </div>
+            <div class="flex-item">
+              <div class="justify-center">
+                <h3 style="font-size: 25px;">Hallie Jay Pope</h3>
+              </div>
+              <div class="image"><a><img src="images/speakers/2023/hallie-jay-pope.jpg"></a></div>
+              <p>is the head of innovation at LCA, a leading Italian law firm, and a visiting researcher at Harvard Law School. At Harvard, he lectured the course on Legal Design at the Graduate School of Design. He is also the author of the first Italian book on legal design, written with Barbara de Muro.<br><br> Marco is one of the founding members of Design Rights, the joint collaboration between LCA and Mondora for legal design services and products. He has experience working with relevant institutions, Fortune 500 and listed companies. Fun facts. Marco has seen more than 1000 concerts, run a few marathons, and completed several times El
+                Camino de Santiago. Whenever he finds time in his hectic agenda, he also works as negotiation consultant and mindfulness trainer.
+                <br><span class="small"></p>
             </div>
             <div class="flex-item">
               <div class="justify-center">
@@ -141,6 +151,14 @@
                 </div>
                 <div class="image"><a><img src="images/speakers/2023/cat-moon.jpg"></a></div>
                 <p>Director of Innovation Design at Vanderbilt Law School and #MakeLawBetter Provocateur<br><span class="small"></p>
+              </div>
+              <div class="flex-item">
+                <div class="justify-center">
+                  <h3 style="font-size: 25px;">Stefania Passera</h3>
+                </div>
+                <div class="image"><a><img src="images/speakers/2023/stefania-passera.jpg"></a></div>
+                <p>is an Italian-born information designer based in Helsinki, Finland. With almost 15 years of experience in simplifying contracts and other legal documents, she is considered a true legal design pioneer. She is the founder of Passera Design and collaborates as Contract Designer in Residence with World Commerce & Contracting.<br><br>Stefania is an all-rounder, backing her design expertise with a solid academic background. She has served as an Assistant Professor at the University of Vaasa and earned her PhD from Aalto University. Her research has been widely published, and she is an in-demand keynote speaker and lecturer on contract design, simplification, and legal design. As a legal design advocate and popularizer, she has co-authored the Legal Design Manifesto, built the open-access Contract Design Pattern Library, and organized 30+ Legal Design Jam workshops around the world.<br><br>Her innovative work has earned her the European Women of Legal Tech Award in 2020 and a World Commerce & Contracting Fellowship in 2017.
+                  <br><span class="small"></p>
               </div>
               <div class="flex-item">
                 <div class="justify-center">
