--- a/about-us.html
+++ b/about-us.html
@@ -57,6 +57,7 @@
 		<div class="menu-container">
 		  <ul class="menu"><li class=" first"><a href="index.html">Home</a></li>
 		    <li class=""><a href="program.html">Program</a></li>
+        <li class=""><a href="brainfactory.html">BrainFactory</a></li>
 		    <li class=""><a href="speakers.html">Speakers</a></li>
 		    <li class=""><a href="about-us.html">About Us</a></li>
         <li class=""><a href="tickets.html">Tickets</a></li>
