--- a/footer.html
+++ b/footer.html
@@ -21,6 +21,9 @@
     <div>
       <p><strong>IN CO-OPERATION WITH:</strong></p>
       <ul class="flex-container wrap" >
+      <li class="flex-item" style="width: 80px;"><img src="images/collabs/helsinki-legal-tech-lab.png"></a></li>
+      <li class="flex-item" style="width: 180px;"><img src="images/collabs/LD_logo_pieni_sb.png"></a></li>
+      <li class="flex-item" style="width: 90px;"><img src="images/collabs/Treehouse-Jul2016.png"></a></li>
       <li class="flex-item" style="width: 160px;"><a><img src="images/collabs/aalto.png"></a></li>
       <li class="flex-item" style="width: 70px;"><a><img src="images/collabs/clt.png"></a></li>
       <li class="flex-item" style="width: 140px;"><a><img src="images/collabs/cltl.png"></a></li>
@@ -41,7 +44,7 @@
       <li class="flex-item" style="width: 230px;"><a><img src="images/collabs/lapin-yliopisto.png"></a></li>
       <li class="flex-item" style="width: 200px;"><img src="images/collabs/college-of-law-logolcolor.jpg"></a></li>
       <li class="flex-item" style="width: 200px;"><img src="images/collabs/lancaster-logo-2.PNG"></a></li>
-      <li class="flex-item" style="width: 70px;"><img src="images/collabs/helsinki-legal-tech-lab.png"></a></li>
+      <li class="flex-item" style="width: 120px;"><img src="images/collabs/Helsingin-yliopisto-oikis.PNG"></a></li>
       <li class="flex-item"><img src="images/collabs/logo-eLegal.png"></a></li>
       </ul>
     </div>
