--- a/speakers.html
+++ b/speakers.html
@@ -117,7 +117,7 @@
               <div class="justify-center">
                 <h3 style="font-size: 25px;">Margaret Hagan</h3>
                 <div class="image"><a><img src="images/speakers/2023/margaret-hagan.jpg"></a></div>
-                <p>is a legal information designer, educator, and cartoonist. She is the founder of the Graphic Advocacy Project, a nonprofit that works with advocates and communities to share legal knowledge. Hallie is currently a visiting professor at the University of Utah S.J. Quinney College of Law, where she runs the Creative Advocacy Lab, a legal information design clinic that re-envisions lawyers as community educators, problem-solvers, and storytellers.<br><span class="small"></p>
+                <p>is the Executive Director of the Legal Design Lab at Stanford University, as well as lecturer at the Law School and d.school. She is a lawyer, and holds a J.D. from Stanford Law School, a DPhil from Queen’s University Belfast, an MA from Central European University, and an AB from University of Chicago. Margaret researches & designs new ways to make the legal system accessible, dignified, and just for more people. Recently, her work has focused on designing and scaling new models of eviction prevention, and improving how search engines, AI tools, and other tech platforms serve people with legal help. See more work at the Stanford Legal Design Lab site (http://legaltechdesign.com).<br><span class="small"></p>
               </div>
             </div>
             <div class="flex-item">
@@ -125,8 +125,7 @@
                 <h3 style="font-size: 25px;">Hallie Jay Pope</h3>
               </div>
               <div class="image"><a><img src="images/speakers/2023/hallie-jay-pope.jpg"></a></div>
-              <p>is the head of innovation at LCA, a leading Italian law firm, and a visiting researcher at Harvard Law School. At Harvard, he lectured the course on Legal Design at the Graduate School of Design. He is also the author of the first Italian book on legal design, written with Barbara de Muro.<br><br> Marco is one of the founding members of Design Rights, the joint collaboration between LCA and Mondora for legal design services and products. He has experience working with relevant institutions, Fortune 500 and listed companies. Fun facts. Marco has seen more than 1000 concerts, run a few marathons, and completed several times El
-                Camino de Santiago. Whenever he finds time in his hectic agenda, he also works as negotiation consultant and mindfulness trainer.
+              <p>is a legal information designer, educator, and cartoonist. She is the founder of the Graphic Advocacy Project, a nonprofit that works with advocates and communities to share legal knowledge. Hallie is currently a visiting professor at the University of Utah S.J. Quinney College of Law, where she runs the Creative Advocacy Lab, a legal information design clinic that re-envisions lawyers as community educators, problem-solvers, and storytellers.
                 <br><span class="small"></p>
             </div>
             <div class="flex-item">
