--- a/brainfactory.html
+++ b/brainfactory.html
@@ -77,8 +77,11 @@
 
 	  <h2>BRAINFACTORY</h2>
 
-	  <h4 style="font-size: 20px; font-style: italic;">BrainFactory is a three-day event with highly interactive, immersive and inspiring hands-on workshops, brainstorming sessions, and prototyping exercises.<br><br></h4>
-	  <h3 style="margin: 40px 0 0 0;">What is BrainFactory?</h3>
+	  <h4 style="font-size: 20px; font-style: italic;">BrainFactory is a three-day event with highly interactive, immersive and inspiring hands-on workshops, brainstorming sessions, and prototyping exercises.</h4>
+    <div class="col-sm-12 justify-center-xs; justify-center" style="padding-bottom: 10px;"><a href="https://lnkd.in/d-WGNyKQ" class="btn light">Apply here</a></div>
+    <p style="padding-bottom: 60px;"><span class="italics">Application is open until 31 May</span></p>
+
+    <h3 style="margin: 40px 0 0 0;">What is BrainFactory?</h3>
 	  <p>At BrainFactory, teams with diverse backgrounds solve complex problems in teams of 5-6 people. Each team will have a legal design professional as a mentor.
       Our BrainFactory team together with our Partners create the challenging BrainFactory problems that arise from real life examples from the cross-sections of law and design thinking.<br><br>
       BrainFactory will take place 11-13 September 2023.
