added new logos, updated footer to feature paid partnerships

--- a/footer.html
+++ b/footer.html
@@ -19,12 +19,18 @@
   
     </div>
     <div>
-      <p><strong>IN CO-OPERATION WITH:</strong></p>
-      <ul class="flex-container wrap" >
-      <li class="flex-item" style="width: 160px;"><a><img src="images/collabs/aalto.png"></a></li>
+      <p><strong>MASE POSSIBLE BY:</strong></p>
+      <ul class="flex-container wrap" style="align-items: center;">
       <li class="flex-item" style="width: 80px;"><img src="images/collabs/helsinki-legal-tech-lab.png"></a></li>
       <li class="flex-item" style="width: 180px;"><img src="images/collabs/LD_logo_pieni_sb.png"></a></li>
+      <li class="flex-item" style="width: 150px;"><img src="images/collabs/Foyen_svart.png"></a></li>
+      <li class="flex-item" style="width: 130px;"><img src="images/collabs/AlmaTalent_black_rgb.png"></a></li>
+      <li class="flex-item" style="width: 100px;"><img src="images/collabs/pickering_pearce_logo.png"></a></li>
       <li class="flex-item" style="width: 90px;"><img src="images/collabs/Treehouse-Jul2016.png"></a></li>
+      /</ul>
+      <p><strong>IN CO-OPERATION WITH:</strong></p>
+      <ul class="flex-container wrap" style="align-items: center;">
+      <li class="flex-item" style="width: 160px;"><a><img src="images/collabs/aalto.png"></a></li>
       <li class="flex-item" style="width: 70px;"><a><img src="images/collabs/clt.png"></a></li>
       <li class="flex-item" style="width: 140px;"><a><img src="images/collabs/cltl.png"></a></li>
       <li class="flex-item" style="width: 170px;"><a><img src="images/collabs/it.png"></a></li>
@@ -44,8 +50,9 @@
       <li class="flex-item" style="width: 230px;"><a><img src="images/collabs/lapin-yliopisto.png"></a></li>
       <li class="flex-item" style="width: 200px;"><img src="images/collabs/college-of-law-logolcolor.jpg"></a></li>
       <li class="flex-item" style="width: 200px;"><img src="images/collabs/lancaster-logo-2.PNG"></a></li>
-      <li class="flex-item" style="width: 120px;"><img src="images/collabs/Helsingin-yliopisto-oikis.PNG"></a></li>
-      <li class="flex-item"><img src="images/collabs/logo-eLegal.png"></a></li>
+      <li class="flex-item" style="width: 110px;"><img src="images/collabs/Helsingin-yliopisto-oikis.PNG"></a></li>
+      <li class="flex-item" style="width: 140px;"><img src="images/collabs/logo-eLegal.png"></a></li>
+      <li class="flex-item" style="width: 240px;"><img src="images/collabs/Laurea.png"></a></li>
       </ul>
     </div>
     <!-- Content Main Section Ends -->
