--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         margin: 10px;
         width: 240px;
         height: 150px;
+		align-items: center;
         line-height: 100px;
         text-align: center;
         justify-content: center;
@@ -304,6 +305,9 @@
 		<ul class="flex-container wrap">
 			<li class="flex-item" style="width: 160px"><a href="https://www.helsinki.fi/en/networks/legal-tech-lab" target="_blank"><img src="images/collabs/helsinki-legal-tech-lab.png"></a></li>
 			<li class="flex-item" style="width: 300px"><a href="https://lawyersdesignschool.com/" target="_blank"><img src="images/collabs/LD_logo_pieni_sb.png"></a></li>
+			<li class="flex-item" style="width: 300px"><a href="https://www.foyen.se/en/" target="_blank"><img src="images/collabs/Foyen_svart.png"></a></li>
+			<li class="flex-item" style="width: 250px"><a href="https://www.almatalent.fi/" target="_blank"><img src="images/collabs/AlmaTalent_black_rgb.png"></a></li>
+			<li class="flex-item" style="width: 190px"><a href="https://www.linkedin.com/company/pickering-pearce/about/" target="_blank"><img src="images/collabs/pickering_pearce_logo.png"></a></li>
 			<li class="flex-item" style="width: 190px"><a href="https://treehouseinnovation.com/" target="_blank"><img src="images/collabs/Treehouse-Jul2016.png"></a></li>
 		</ul>
 		</div>  		
@@ -396,6 +400,7 @@
 	<li class="flex-item" style="width: 300px;"><a href="https://www.lancaster.ac.uk/law/" target="_blank"><img src="images/collabs/lancaster-logo-2.PNG"></a></li>
 	<li class="flex-item" style="width: 170px;"><a href="https://www.helsinki.fi/en/faculty-law" target="_blank"><img src="images/collabs/Helsingin-yliopisto-oikis.PNG"></a></li>
 	<li class="flex-item"><a href="https://www.elegal.technology/" target="_blank"><img src="images/collabs/logo-eLegal.png"></a></li>
+	<li class="flex-item" style="width: 370px;"><a href="https://www.laurea.fi/en/" target="_blank"><img src="images/collabs/Laurea.png"></a></li>
   </ul>
 
 </div>
