updated BF site, added new logos

--- a/footer.html
+++ b/footer.html
@@ -27,6 +27,10 @@
       <li class="flex-item" style="width: 130px;"><img src="images/collabs/AlmaTalent_black_rgb.png"></a></li>
       <li class="flex-item" style="width: 100px;"><img src="images/collabs/pickering_pearce_logo.png"></a></li>
       <li class="flex-item" style="width: 90px;"><img src="images/collabs/Treehouse-Jul2016.png"></a></li>
+      <li class="flex-item" style="width: 110px;"><img src="images/collabs/Dottir-logo-musta.jpg"></a></li>
+      <li class="flex-item" style="width: 140px;"><img src="images/collabs/Tietoevry.png"></a></li>
+      <li class="flex-item" style="width: 90px;"><img src="images/collabs/Edita.png"></a></li>
+
       /</ul>
       <p><strong>IN CO-OPERATION WITH:</strong></p>
       <ul class="flex-container wrap" style="align-items: center;">
