--- a/index.html
+++ b/index.html
@@ -59,14 +59,17 @@
 		align-items: center;
         line-height: 100px;
         text-align: center;
-        justify-content: center;
-      } .flex-item:hover img {
+        justify-content:center;
+      }
+	  .flex-item:hover img {
         transform: scale(1.2);
-      } .flex-item img {
+      }
+	  .flex-item img {
         max-width: 100%;
         height: auto;
         transition: transform 0.2s ease-in-out;
       }
+
 
 	</style>
 
@@ -309,6 +312,9 @@
 			<li class="flex-item" style="width: 250px"><a href="https://www.almatalent.fi/" target="_blank"><img src="images/collabs/AlmaTalent_black_rgb.png"></a></li>
 			<li class="flex-item" style="width: 190px"><a href="https://www.linkedin.com/company/pickering-pearce/about/" target="_blank"><img src="images/collabs/pickering_pearce_logo.png"></a></li>
 			<li class="flex-item" style="width: 190px"><a href="https://treehouseinnovation.com/" target="_blank"><img src="images/collabs/Treehouse-Jul2016.png"></a></li>
+			<li class="flex-item" style="width: 190px"><a href="https://www.dottirlaw.com/" target="_blank"><img src="images/collabs/Dottir-logo-musta.jpg"></a></li>
+			<li class="flex-item" style="width: 250px"><a href="https://www.tietoevry.com/fi/" target="_blank"><img src="images/collabs/Tietoevry.png"></a></li>
+			<li class="flex-item" style="width: 170px"><a href="https://shop.edita.fi/" target="_blank"><img src="images/collabs/Edita.png"></a></li>
 		</ul>
 		</div>  		
 	  </div>
