--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 					</div>
 					<h1 style="color: white;">Legal Design Summit</h1>
 					<p class="slogan-enhanced">11–13 SEP 23 BRAINFACTORY | 14–15 SEP 23 SUMMIT | HELSINKI, FINLAND</p><br><br>
-					<p class="slogan-long">Legal Design Summit is a platform for forward-thinking professionals from all over the globe.<br><br>Welcome to Helsinki for the largest legal design event in the world.</p>
+					<p class="slogan-long">Legal Design Summit is a platform for forward-thinking professionals from all over the globe.<br><br>The Largest legal design event in the world takes place in the main hall of the University of Helsinki.</p>
 				</div>
 			</div>
         <!-- HEADER Section Ends -->
@@ -374,7 +374,7 @@
       </div>
     </div>
 
-
+</div>
 <!-- Reworked section on logos to appear, now using flex wrap instead of flexgrid-->
 
 </div>
