--- a/program.html
+++ b/program.html
@@ -72,7 +72,7 @@
 
 	  <h2>Program</h2>
 
-	  <p style="font-size: 20px;">We are working hard to fill the two day summit with interesting speakers and an inspiring program!</p>
+	  <p style="font-size: 20px;">We are working hard to fill the two day summit with interesting speakers and an inspiring program!<br><br>The event will be hosted in the main hall of University of Helsinki.</p>
 	  <h3 style="margin: 40px 0 0 0;">Thursday 14 September</h3>
 	  <p >Under construction...</p>
 	  <h3 style="margin: 40px 0 0 0;">Friday 15 September</h3>
