new logos and speakers

--- a/footer.html
+++ b/footer.html
@@ -30,8 +30,9 @@
       <li class="flex-item" style="width: 110px;"><img src="images/collabs/Dottir-logo-musta.jpg"></a></li>
       <li class="flex-item" style="width: 140px;"><img src="images/collabs/Tietoevry.png"></a></li>
       <li class="flex-item" style="width: 90px;"><img src="images/collabs/Edita.png"></a></li>
+      <li class="flex-item" style="width: 100px;"><img src="images/collabs/DLA_Piper.jpg"></a></li>
 
-      /</ul>
+      </ul>
       <p><strong>IN CO-OPERATION WITH:</strong></p>
       <ul class="flex-container wrap" style="align-items: center;">
       <li class="flex-item" style="width: 160px;"><a><img src="images/collabs/aalto.png"></a></li>
@@ -57,6 +58,7 @@
       <li class="flex-item" style="width: 110px;"><img src="images/collabs/Helsingin-yliopisto-oikis.PNG"></a></li>
       <li class="flex-item" style="width: 140px;"><img src="images/collabs/logo-eLegal.png"></a></li>
       <li class="flex-item" style="width: 240px;"><img src="images/collabs/Laurea.png"></a></li>
+      <li class="flex-item" style="width: 140px;"><img src="images/collabs/UEF.jpg"></a></li>
       </ul>
     </div>
     <!-- Content Main Section Ends -->
