--- a/index.html
+++ b/index.html
@@ -315,6 +315,7 @@
 			<li class="flex-item" style="width: 190px"><a href="https://www.dottirlaw.com/" target="_blank"><img src="images/collabs/Dottir-logo-musta.jpg"></a></li>
 			<li class="flex-item" style="width: 250px"><a href="https://www.tietoevry.com/fi/" target="_blank"><img src="images/collabs/Tietoevry.png"></a></li>
 			<li class="flex-item" style="width: 170px"><a href="https://shop.edita.fi/" target="_blank"><img src="images/collabs/Edita.png"></a></li>
+			<li class="flex-item" style="width: 200px"><a href="https://www.dlapiper.com/en-us" target="_blank"><img src="images/collabs/DLA_Piper.jpg"></a></li>
 		</ul>
 		</div>  		
 	  </div>
@@ -407,6 +408,7 @@
 	<li class="flex-item" style="width: 170px;"><a href="https://www.helsinki.fi/en/faculty-law" target="_blank"><img src="images/collabs/Helsingin-yliopisto-oikis.PNG"></a></li>
 	<li class="flex-item"><a href="https://www.elegal.technology/" target="_blank"><img src="images/collabs/logo-eLegal.png"></a></li>
 	<li class="flex-item" style="width: 370px;"><a href="https://www.laurea.fi/en/" target="_blank"><img src="images/collabs/Laurea.png"></a></li>
+	<li class="flex-item" style="width: 240px;"><a href="https://www.uef.fi/en" target="_blank"><img src="images/collabs/UEF.jpg"></a></li>
   </ul>
 
 </div>
