--- a/speakers.html
+++ b/speakers.html
@@ -121,12 +121,36 @@
               </div>
               <div class="flex-item">
                 <div class="justify-center">
+                  <h3 style="font-size: 25px;">Callum Brown</h3>
+                  <div class="image"><a><img src="images/speakers/2023/callum-brown.jpg"></a></div>
+                  <p>Senior Legal Designer, Simmons & Simmons<span class="read-more-text">. Callum is a Senior Legal Designer at Simmons & Simmons. He has been working in legal tech and legal design for the past 4 years with the international law firm Simmons and Simmons. He has guest lectured at Oxford, Science Po, IE Madrid and Swansea. He was an English teacher for 10 years, and was a professional fire juggler.</span></p>
+                  <span class="read-more-btn">Read More...</span>
+                </div>
+              </div>
+              <div class="flex-item">
+                <div class="justify-center">
+                  <h3 style="font-size: 25px;">Glen Byrne</h3>
+                  <div class="image"><a><img src="images/speakers/2023/glen-byrne.jpg"></a></div>
+                  <p>Legal Designer, Simmons & Simmons<span class="read-more-text">. Glen qualified as a lawyer in Ireland before joining Simmons Wavelength as a legal designer. Drawing on experiences working in design and communications, Glen creates a better experience of law for its users. As part of training as a solicitor, Glen worked in employment law, European competition law, debt and enforcement, and eventually qualifying into international tax law. Glen also worked in communications and in graphic design, which has given him a perspective unique in the legal industry and skills that are pertinent to successful legal design. Glen has worked on large legal design projects as part of Simmons & Simmons, such as recreating the data privacy manual for a large, multinational energy business, and redesigning the code of conduct for a global financial institution. Glen has also taught legal design principles at Oxford University and Swansea University. </span></p>
+                  <span class="read-more-btn">Read More...</span>
+                </div>
+              </div>
+              <div class="flex-item">
+                <div class="justify-center">
+                  <h3 style="font-size: 25px;">Kanan Dhru</h3>
+                  <div class="image"><a><img src="images/speakers/2023/kanan-dhru.jpg"></a></div>
+                  <p>Founder of think-tank Research Foundation for Governance and Lawtoons<span class="read-more-text">. Kanan Dhru has developed and researched innovative solutions in law since 2009. She has been a practicing lawyer, founder of a think-tank on legal reforms called Research Foundation for Governance and Lawtoons. Operational Board Member of Legal Hackers and a Senior Lecturer in legal technology at The Hague University of Applied Sciences, Kanan led a legal innovation community at the Hague Institute for Innovation of Laws.</span></p>
+                  <span class="read-more-btn">Read More...</span>
+                </div>
+              </div>
+              <div class="flex-item">
+                <div class="justify-center">
                   <h3 style="font-size: 25px;">Michael Doherty</h3>
                   <div class="image"><a><img src="images/speakers/2023/michael-doherty.JPG"></a></div>
                   <p>Professor of Law, and Associate Head of the Law School at Lancaster University, UK<span class="read-more-text">. Michael Doherty is Professor of Law, and Associate Head of the Law School, at Lancaster University, UK. His main teaching and research expertise, beyond Legal Design, is in constitutional law and human rights and he is co-author of Public Law (3rd edn, Routledge 2023). He is active in legal education and pedagogy and he co-created the Connecting Legal Education online community in 2020, and is a former Chair of the Association of Law Teachers. <br><br>Michael’s work in Legal Design encompasses education, cultural studies and disciplinarity, and access to justice. Professor Doherty is working with a team of Legal Design scholars and practitioners from around the world to launch the Legal Design Journal in 2023. Our goal is to provide a platform for great quality legal design work, and to make this as accessible as possible.</span></p>
                   <span class="read-more-btn">Read More...</span>
                 </div>
-                </div>
+              </div>
               <div class="flex-item">
                 <div class="justify-center">
                   <h3 style="font-size: 25px;">Margaret Hagan</h3>
@@ -169,6 +193,14 @@
                 </div>
                 <div class="flex-item">
                   <div class="justify-center">
+                    <h3 style="font-size: 25px;">Erika Pagano</h3>
+                  </div>
+                  <div class="image"><a><img src="images/speakers/2023/erika-pagano.jpg"></a></div>
+                  <p>Head of Legal Innovation and Design, Simmons & Simmons<span class="read-more-text">. Erika is an award-winning lawyer, innovator, and educator whose sweet spots include culture creation, leadership, strategy, teaming, technology, and cross-border initiatives. Having dedicated a decade to change, creativity, and client centricity in the legal profession, Erika works with a wide variety of clients on harnessing the power of legal design. Erika was recognized by LawTechUK, a Ministry of Justice-backed initiative, as a legal tech trailblazer. She was named Rising Star of the Year (the Lynne Freeman Award) by WeAreTheCity in 2021, as well as “highly commended” for Rising Star of the Year at the 2019 British Legal Awards. <br><br>She is a regular speaker and published author. She also serves as Guest Faculty at IE University (Madrid), where she teaches undergraduate and masters courses on innovation in the legal profession. She sits on multiple boards (Georgetown Class of 2008 Committee, LawWithoutWalls Advisory Board, University of Miami School of Law Alumni Board and National Advisory Council, and others) and is a member of Simmons’ gender balance and neurodiversity committees.</span></p>
+                  <span class="read-more-btn">Read More...</span>
+                </div>
+                <div class="flex-item">
+                  <div class="justify-center">
                     <h3 style="font-size: 25px;">Stefania Passera</h3>
                   </div>
                   <div class="image"><a><img src="images/speakers/2023/stefania-passera.jpg"></a></div>
@@ -181,6 +213,14 @@
                   </div>
                   <div class="image"><a><img src="images/speakers/2023/marie-potel-saville.png"></a></div>
                   <p>Founder of Amurabi, Legal innovator, lecturer at Sciences Po Paris, Singapore Management University and Assas<span class="read-more-text">. Marie Potel-Saville is the founder of Amurabi, an award-winning legal innovation studio, and www.fairpatterns.com, a platform dedicated to fight against dark patterns and train all stakeholders to avoid them. She is an international keynote speaker in human-centric law and legal innovation by design (IAPP Global Privacy Summit, W@Privacy, Computer Privacy and Data Protection, LegalGeek…).<br><br>Before founding Amurabi, she worked in private practice for 10 years (Freshfields, Allen & Overy) in Europe, then moved in-house to become GC EMEA of a US listed group.  She holds a Master’s Degree in Innovation by Design at ENSCI. She is also a member of the Advisory Board of the Serpentine Galleries’ Legal Lab and is involved in pro bono access to access initiatives. Marie teaches innovation by design at Singapore Management University, Sciences Po and Assas.</span></p>
+                  <span class="read-more-btn">Read More...</span>
+                </div>
+                <div class="flex-item">
+                  <div class="justify-center">
+                    <h3 style="font-size: 25px;">Jose Torres</h3>
+                  </div>
+                  <div class="image"><a><img src="images/speakers/2023/jose-torres.JPG"></a></div>
+                  <p>Partner at Lexia Abogados leading Legal Design and Law & Technology practise<span class="read-more-text">. Jose Torres is a partner at Lexia Abogados where he directs the Legal Design and Law & Technology practice. At Lexia, he works with major multinationals and startups to create better contracts and compliance programs through legal design. He is the Chair of the Legal Design Lab for Access to Justice  of the National School of the Judiciary of the Dominican Republic, has been a full time fellow of Stanford's Legal Design Lab and an attorney at Meta, Skadden Arps, the WTO and law firms in Colombia.</span></p>
                   <span class="read-more-btn">Read More...</span>
                 </div>
               </div>
